--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.1.0
+    commitID: 396144b7f5ad6df421f90fd921a5b38bb4737fdc
+
 -   version: 3.0.0
     commitID: 61b34cd0e5431049a3c33b9257196aa3021f7557
 
