--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.6
+    commitID: 4b72e4879e5d2e68ec1c28ac774aa3643e0f7f2a
+
 -   version: 3.8.5
     commitID: 224cfbaec1d950bd8b2fbb3db79b6c79b2fc10b9
 
