--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.7
+    commitID: 9f5982120384c189e44526a9078ed2399ac7e001
+
 -   version: 3.8.6
     commitID: 4b72e4879e5d2e68ec1c28ac774aa3643e0f7f2a
 
