--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "highlight.js": "^10.1.2",
     "sketch-module-web-view": "^3.1.4",
     "svg-path-bounds": "^1.0.1",
-    "svgo": "file:modules/svgo_browser",
+    "svgo": "file:modules/svgo-browser",
     "svgpath": "^2.3.0"
   },
   "author": "Ashung Hung <ashung.hung@gmail.com>"
